--- a/frontend/List.html
+++ b/frontend/List.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>รายการแจ้งซ่อม</title>
-  <link rel="stylesheet" href="/frontend/list-style.css" />
+  <link rel="stylesheet" href="list-style.css" />
 </head>
 <body>
   <div class="container">
     <h2>📋 รายการแจ้งซ่อม</h2>
 
     <div class="btn-right">
-      <button class="btn-primary" onclick="window.location.href='./RoleSelect.html'">
+      <button class="btn-primary" onclick="window.location.href='./index.html'">
         🔙 กลับไปหน้าให้บริการ
       </button>
     </div>
@@ -49,7 +49,8 @@ const urlParams = new URLSearchParams(window.location.search);
 const role = urlParams.get("role");
 const reporter = urlParams.get("reporter");
 
-let apiUrl = "http://localhost:3000/api/requests";
+// ✅ ใช้ endpoint ที่ถูกต้อง
+let apiUrl = "https://repair-backend-fyc4.onrender.com/api/requests";
 if (role !== "admin" && reporter) {
   apiUrl += `?reporter=${encodeURIComponent(reporter)}`;
 }
@@ -82,7 +83,7 @@ async function loadData() {
       const token = sessionStorage.getItem('token');
       if (!token) {
         alert('ต้องล็อกอินเป็นแอดมินก่อน');
-        window.location.href = './RoleSelect.html';
+        window.location.href = './index.html';
         return;
       }
       headers = { 'Authorization': 'Bearer ' + token };
@@ -128,7 +129,7 @@ function renderTable(data) {
 
     if (role === "admin") {
       const statusSelect = document.createElement('select');
-      statusSelect.className = 'status-select'; // ✅ เพิ่มตรงนี้
+      statusSelect.className = 'status-select';
 
       ['รอดำเนินการ','กำลังดำเนินการ','เสร็จสิ้น'].forEach(status=>{
         const option=document.createElement('option');
@@ -141,7 +142,8 @@ function renderTable(data) {
       statusSelect.addEventListener('change', async ()=>{
         try {
           const token = sessionStorage.getItem('token');
-          const res = await fetch(`http://localhost:3000/api/requests/${item.id || item._id}`,{
+          // ✅ ใช้ endpoint ที่ถูกต้องสำหรับอัปเดตสถานะ
+          const res = await fetch(`https://repair-backend-fyc4.onrender.com/api/requests/${item._id}`,{
             method:'PATCH',
             headers:{
               'Content-Type':'application/json',
@@ -185,7 +187,6 @@ function renderTable(data) {
     tbody.appendChild(row);
   });
 }
-
 
 document.getElementById('searchInput').addEventListener('input',()=>{
   const keyword=document.getElementById('searchInput').value.toLowerCase();
