--- a/frontend/Report.HTML
+++ b/frontend/Report.HTML
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>แจ้งซ่อมอุปกรณ์</title>
-  <link rel="stylesheet" href="/frontend/style.css"> <!-- ใช้ CSS neon dark ที่แก้ไว้ -->
+  <link rel="stylesheet" href="style.css"> <!-- ใช้ CSS neon dark ที่แก้ไว้ -->
 </head>
 <body>
 
   <div class="form-container">
     <!-- ปุ่มกลับ -->
     <div class="back-wrapper">
-      <button class="btn-back" onclick="window.location.href='RoleSelect.html'">
+      <button class="btn-back" onclick="window.location.href='index.html'">
         🔙 กลับไปหน้าให้บริการ
       </button>
     </div>
@@ -57,7 +57,7 @@
       const data = Object.fromEntries(formData.entries());
 
       try {
-        const response = await fetch('http://localhost:3000/api/requests', {
+        const response = await fetch('https://repair-backend-fyc4.onrender.com/api/auth/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
