--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,8 @@
         if (!user || !pass) return alert('กรุณากรอกยูสเซอร์และรหัสผ่านแอดมิน');
 
         try {
-          const resp = await fetch('http://localhost:3000/api/auth/login', {
+          // ✅ เปลี่ยน URL เป็น backend ที่ deploy จริง
+          const resp = await fetch('https://repair-backend-fyc4.onrender.com/api/auth/login', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ username: user, password: pass })
@@ -90,7 +91,8 @@
     }
 
     function goToReport() {
-      window.location.href = './Report.html';
+      window.location.assign('./Report.HTML');
+
     }
   </script>
 </body>
